# autoplan_public_temp

./: BART_Planning.py  CMakeLists.txt
BARTPedicleScrewSimulatorWizard/: AutoPlanner.py  CostFunctions.py  DefineROIStep.py  EndStep.py  GradeStep.py  LandmarksStep.py  LoadDataStep.py  MeasurementsStep.py  PCAUtils.py  PedicleScrewSimulatorStep.py  RobotInit.py  ScrewStep.py  SegmentationStep.py  Vertebra.py  __init__.py  test.py
PedicleScrewSimulatorWizard/: DefineROIStep.py  GradeStep.py  LandmarksStep.py  MeasurementsStep.py  ScrewStep.py
Resources/ScrewModels/: 3.5x30.stl  3.5x35.stl  3.5x40.stl  3.5x45.stl  3.5x50.stl  3.5x55.stl  3.5x60.stl  3.5x65.stl  3.5x70.stl  3.5x75.stl  3x30.stl  3x35.stl  3x40.stl  3x45.stl  3x50.stl  3x55.stl  3x60.stl  3x65.stl  3x70.stl  3x75.stl  4.5x30.stl  4.5x35.stl  4.5x40.stl  4.5x45.stl  4.5x50.stl  4.5x55.stl  4.5x60.stl  4.5x65.stl  4.5x70.stl  4.5x75.stl  4x30.stl  4x35.stl  4x40.stl  4x45.stl  4x50.stl  4x55.stl  4x60.stl  4x65.stl  4x70.stl  4x75.stl  (+1 more)
Resources/UI/: BART_Planning.ui
